# ChangeLog for media-gfx/gimp
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  04 May 2011; Michael Weber <xmw@gentoo.org> gimp-2.7.2.ebuild:
  adjusted DEPENDS

  04 May 2011; Michael Weber <xmw@gentoo.org> gimp-2.7.2.ebuild:
  media-gfx/gimp-2.7.2 needs >=dev-libs/glib-2.28

*gimp-2.7.1 (04 May 2011)

  04 May 2011; Michael Weber <xmw@gentoo.org> +gimp-2.7.1.ebuild,
  +metadata.xml:
  version bump, bug 283152
