@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST gimp-2.7.1.tar.bz2 17714761 RMD160 0d90735de80cc8aeeef43f6441ffcbdf6fee32c9 SHA1 3dcfc08ddccbdf541449e4ea6be252b449f6d872 SHA256 c5937094567441fe74e24f9aadaeb064ab4ef1e3e510871758d37fbbade489d2
 DIST gimp-2.7.2.tar.bz2 18081542 RMD160 546f838fe8fba3ef000d4b4b4a3b6be71ca409e0 SHA1 4690420961d110f99448c32fe61aae7d4869a863 SHA256 a63969719c7637b8044d15648ec2b6163df17d5ac3d2fc56fa1ccafbc80522cd
-EBUILD gimp-2.7.1.ebuild 2851 RMD160 957700fc603f7dcdfc10c0ce2ea6d6735de08710 SHA1 97ccc4cdc392db5f9d51772bf965906e6db83fb2 SHA256 3bbd3133553aace4f39e57fca76be6bd3899bd1cd19f35f75f9832119b971378
-EBUILD gimp-2.7.2.ebuild 2855 RMD160 fb28252a62a49ea2f7f5cea16b131b8f8c57325a SHA1 786cd6a68837bb9ade85ded53ca19c952cb46fd0 SHA256 d12bdd87d35f4de46cd856f7b8f494520a6ceda76713b1bb4f9fad5d5c7625d9
-MISC ChangeLog 454 RMD160 714719e7f798845efb3cab66b570a54c62a760f3 SHA1 05c23c0095b9e44c8771344692b6178fd4a21576 SHA256 e07a67bc66079b496efc46649d4c38d570589cdbdbe36ea252202ca767fdb5e3
+DIST gimp-2.7.3.tar.bz2 18206530 RMD160 5740b1b62b0fca255d0ca046477c21ab9c57a5ca SHA1 bea6edc3423774ace8dd86222314f4ef2278cdd8 SHA256 669811e66c6a5dffdca0df3f39f699b3a013aa5634447d9b90268f4068a8a4d9
+EBUILD gimp-2.7.1.ebuild 2804 RMD160 dc1029768b8b485ae675b0f7cb3445ce97a1b09f SHA1 a991c0f5c44881f5a384188d1c30ad811fa54f24 SHA256 3d0912d6139d3f307fb5eaead8b1f63fc371b1113c5a98d09168f32b3bbbe8b7
+EBUILD gimp-2.7.2.ebuild 2808 RMD160 aa718a87e8aab5161de135db3f86ce692887a095 SHA1 25196f7c3137b77e04a53fc2b965a5ecb0289c72 SHA256 b1a4aa39034bb2ad957c32ef237dadcdf52d02a7267a095292c384033d277472
+EBUILD gimp-2.7.3.ebuild 2805 RMD160 263c732ee992db4c60a1793773d28a305e4e9775 SHA1 7acc6df520c7817dabd35eab41d6d45cf4304f14 SHA256 937d68dbe20a1a3c23d2164ba5e764c75259a1797e16b249f097d511cbbf421e
+MISC ChangeLog 708 RMD160 63058fe378cea10046b5dbb1ad02e800da5287e2 SHA1 d3d74d403c5076eebe211934214fe65cbe278f8d SHA256 d617854b334db274f0fe9ab8931ad9239d6b755e605344a2391d7327872c7e25
 MISC metadata.xml 419 RMD160 fd18ad4202fc69ef3773bc6bb29a21acbe2b149f SHA1 7090358dd66471068cffe9572e74dbf5aa2933d0 SHA256 47e196147c4cc85719b03957c0aae3ce70d4e5a1f6e2f96fcc94098aea346d29
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk3As3oACgkQknrdDGLu8JBd5wD/T61kjyK0DscE+7Zjqpy7shDw
-FxfnheT9BCsFa0jxZewA/2FQhc+seRlBNG/AwiC6xjrCKjA72IUpZdPO2TleS0re
-=ufNn
+iF4EAREIAAYFAk6giTEACgkQknrdDGLu8JBiEAD9F+fEqhxg94/i0pvnEtGWYCxJ
+z5A+AqxTK/IvVmPDZHYA/1kUNHlAtp+XgZDkYimxV3OFRjsxE8MpDGcgKYI3xyYX
+=Cdr+
 -----END PGP SIGNATURE-----
